crates/proef-cli/tests/snapshots/corpus__artifact__520-api-breadth--a-photo-file-is-uploaded-as-multipart.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — A photo file is uploaded as multipart
# source: tests/features/520_api_breadth.feature:17
# replay: hurl --test 520-api-breadth--a-photo-file-is-uploaded-as-multipart.hurl

# tests/features/520_api_breadth.feature:18 — the photo file is uploaded
POST http://127.0.0.1:8787/upload
[Multipart]
photo: file,fixture.jpg;
HTTP *
[Asserts]
status == 201
