crates/proef-cli/tests/snapshots/corpus__artifact__520-api-breadth--an-attachment-file-is-uploaded-as-multipart.map.json.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
{
  "schema": 1,
  "entries": [
    {
      "hurl_lines": [
        6,
        11
      ],
      "feature": {
        "file": "tests/features/520_api_breadth.feature",
        "line": 18,
        "text": "the attachment file is uploaded"
      },
      "optional": false,
      "captures": [],
      "batch": 0,
      "step": 0
    },
    {
      "hurl_lines": [
        11,
        11
      ],
      "feature": {
        "file": "tests/features/520_api_breadth.feature",
        "line": 19,
        "text": "the response status is 201"
      },
      "optional": false,
      "captures": [],
      "batch": 0,
      "step": 1
    }
  ]
}
